addedphtots for moller page

--- a/pages/MOLLER/MOLLER.mdx
+++ b/pages/MOLLER/MOLLER.mdx
@@ -235,17 +235,20 @@ Next is the 1.25 m **liquid hydrogen target**, where the beam electrons interact
   <table>
     <tr>
       <td style={{ padding: "20px 20px" }}>
-        ![](/images/sBoom_jet.png)
+        ![](/images/moller_shower/target_1.png)
       </td>
-    </tr>
-    <tr>
-      <td style={{ textAlign: "center", maxWidth: "250px"  }}>
-       Liquid hydrogen target.
+       <td style={{ padding: "20px 20px" }}>
+       <Image src="/images/moller_shower/target_2.png" width="600" height="400" />
       </td>
     </tr>
   </table>
 </div>
-
+<div align="center">
+    Liquid hydrogen target. 
+    <small style={{ fontSize: "0.8em", color: "gray" }}>
+      [Images](https://moller.jlab.org/cgi-bin/DocDB/private/ShowDocument?docid=938) from Mike Bevins and Silviu Covrig.
+    </small>
+</div>
 <br></br>
 <br></br>
 
@@ -255,7 +258,7 @@ Next is the 1.25 m **liquid hydrogen target**, where the beam electrons interact
 
 Following the target is the **spectrometer** system, consisting of resistive **toroidal magnets** with a 7-fold azimuthal symmetry, 
 which separates and focuses the scattered electrons into 7 different channels. This helps to optimize the measurment by blocking one 
-the scattered electrons and excepting the other. As the electroweak reaction always scatters two electrons (one fromt he beam and 
+the scattered electrons and excepting the other. As the electroweak reaction always scatters two electrons (one from the beam and 
 one from the target).
 
 <br></br>
@@ -265,12 +268,15 @@ one from the target).
   <table>
     <tr>
       <td style={{ padding: "20px 20px" }}>
-        ![](/images/sBoom_jet.png)
+     <Image src="/images/moller_shower/spectrometer_1.png" width="600" height="400" />
       </td>
     </tr>
     <tr>
       <td style={{ textAlign: "center", maxWidth: "250px"  }}>
-       Liquid hydrogen target.
+       Spectrometer
+       <small style={{ fontSize: "0.8em", color: "gray" }}>
+      [Image](https://moller.jlab.org/cgi-bin/DocDB/private/ShowDocument?docid=938) from Mike Bevins.
+    </small>
       </td>
     </tr>
   </table>
@@ -287,30 +293,6 @@ After the electrons have passed through the spectrometer, they are detected by t
 MOLLER experiment are made of thin quartz and arranged in a specific geometry to effectively capture Cherenkov radiation emitted by the 
 scattered electrons. 
 
-<br></br>
-<br></br>
-
-<div align = "center">
-  <table>
-    <tr>
-      <td style={{ padding: "20px 20px" }}>
-        ![](/images/sBoom_jet.png)
-      </td>
-    </tr>
-    <tr>
-      <td style={{ textAlign: "center", maxWidth: "250px"  }}>
-       The primary thin quartz detectors.
-      </td>
-    </tr>
-  </table>
-</div>
-
-<br></br>
-<br></br>
-
----
-
-#### Additional Detectors
 These detectors are organized into six concentric rings, each divided into at least 21 individual segments around 
 the azimuth. The rings have different radial distances to capture the various scattered electrons. The second-largest ring primarily 
 captures the Moller electron signal, while the second-smallest ring mainly captures the unradiated elastic scattered signal from 
@@ -324,23 +306,29 @@ information about the underlying physics in the experiment.
   <table>
     <tr>
       <td style={{ padding: "20px 20px" }}>
-        ![](/images/sBoom_jet.png)
+        <Image src="/images/moller_shower/main_det_1.jpg" width="600" height="400" />
       </td>
-    </tr>
-    <tr>
-      <td style={{ textAlign: "center", maxWidth: "250px"  }}>
-       The rings of thin quartz detectors.
+      <td style={{ padding: "20px 20px" }}>
+       <Image src="/images/moller_shower/main_det_2.jpg" width="600" height="400" />
       </td>
     </tr>
   </table>
 </div>
 
-<br></br>
-<br></br>
+<div align="center">
+  <Image src="/images/moller_shower/main_det_3.jpg" width="600" height="400" />
+  Main detectors
+  <small style={{ fontSize: "0.8em", color: "gray" }}>
+      [Images](https://moller.jlab.org/cgi-bin/DocDB/private/ShowDocument?docid=938) from Larry Bartoszek.
+  </small>
+</div>
+
 
 ---
 
-Finally, we have additional detectors including **ShowerMax**, **pion detectors** (acrylic calorimeters), and large and 
+#### Additional Detectors
+
+Additional detectors including **ShowerMax**, **pion detectors** (acrylic calorimeters), and large and 
 small angle monitors, which help monitor backgrounds and calibrations. Together, these components form a comprehensive experimental 
 setup that allows scientists to measure the Apy in the lepton-lepton electroweak reaction.
 
@@ -351,10 +339,10 @@ setup that allows scientists to measure the Apy in the lepton-lepton electroweak
   <table>
     <tr>
       <td style={{ padding: "20px 20px" }}>
-        ![](/images/sBoom_jet.png)
+        ![](/images/moller_shower/showermax.png)
       </td>
        <td style={{ padding: "20px 20px" }}>
-        ![](/images/sBoom_jet.png)
+         <Image src="/images/moller_shower/pion.png" width="400" height="400" />
       </td>
     </tr>
     <tr>
@@ -366,6 +354,13 @@ setup that allows scientists to measure the Apy in the lepton-lepton electroweak
       </td>
     </tr>
   </table>
+</div>
+
+<div align="center">
+<small style={{ fontSize: "0.8em", color: "gray" }}>
+      [Images](https://moller.jlab.org/cgi-bin/DocDB/private/ShowDocument?docid=937) from Sudip Bhattarai (ShowerMax) and Wouter Deconinck
+and Fatemeh Gorgannejad (pion).
+  </small>
 </div>
 
 <br></br>
