--- a/pages/MOLLER/Showermax.mdx
+++ b/pages/MOLLER/Showermax.mdx
@@ -170,6 +170,14 @@ This is a brief video how the ShowerMax detector works.
 
 In this section, we discussed the ShowerMax detector, which is a key component of the MOLLER experiment. Its main purpose is to make an independent measurment of the Apy, and to help us account for background events as an electromagnetic calorimeter. It does this by measuring Cherenkov radiation made from the electromagnetic showers of the scatterd electrons from the beam intereacting with the tungsten atoms. 
 
+<br></br>
+<br></br>
+
+---
+
+<small style={{ fontSize: "0.8em", color: "gray" }}>
+     All ShowerMax images where original created by Sudip Bhattarai and used without permission (Sorry Sudip).
+  </small>
 
 
 {/*Video MOLLER part 3:
