--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -4,6 +4,6 @@ import Video from '@/components/video'
 # About
 
 
-This webiste is meant to be a wiki style repository of information about the MOLLER experiment and Dr. McNulties groups work within it. It includes information about the experiment and the ShowerMax detector. 
+This webiste is meant to be a wiki style repository of information about the MOLLER experiment and Dr. McNulty's groups work within it. It includes information about the experiment and the ShowerMax detector. 
 
 It includes tutorials meant to give incoming students a head start on the software and hardware they will be using. 
