added more pictures

--- a/pages/MOLLER/Labsandequip.mdx
+++ b/pages/MOLLER/Labsandequip.mdx
@@ -1,3 +1,12 @@
+---
+title: 'Lab Spaces and Equipment'
+---
+
+import { Tab, Tabs } from 'nextra-theme-docs'
+import Video from '@/components/video'
+import Image from 'next/image'
+import { Callout } from 'nextra-theme-docs'
+
 # ISU Laboratory Spaces and Equipment
 In this section, we will introduce you to the laboratory spaces and equipment used by Dr. McNulty's group at Idaho State University (ISU). Each lab space contains specific equipment and tools that the group uses to conduct experiments, analyze data, and develop new technologies.
 
@@ -7,14 +16,82 @@ The main lab space is where the majority of the group's experimental work takes 
 ### Cosmic Ray Stand
 The cosmic ray stand consists of three gas electron multiplier (GEM) detectors that track incoming cosmic rays. These detectors are used in conjunction with scintillating paddles, which serve as a trigger for the data acquisition system (DAQ).
 
+
+<br></br>
+<br></br>
+
+<div align = "center">
+<Image src="/images/labs/cosmic_stand_2.jpg" width="600" height="400" />
+
+Cosmic ray stand.
+</div>
+
+---
+
+<br></br>
+<br></br>    
+
+<div align = "center">
+  <table>
+    <tr>
+      <td style={{ padding: "20px 20px" }}>
+        <Image src="/images/labs/gem_1.png" width="400" height="400" />
+      </td>
+       <td style={{ padding: "20px 20px" }}>
+         <Image src="/images/labs/gem_2.png" width="400" height="400" />
+      </td>
+    </tr>
+  </table>
+</div>
+
+<div align="center">
+Gem detectors.
+</div>
+
+<br></br>
+<br></br>
+
+
 ### DAQs (Data Acquisition Systems)
 There are three DAQs in the main lab space, namely DAQ 3, 4, and 5. These systems are connected to either a NIM bin system or a VME crate and are responsible for collecting and processing data from the detectors. The DAQs run the CODA software developed by Jefferson Lab.
 
 ### VME Crate and NIM Bins
 VME crates and NIM bins are modular electronics systems used to house and power various electronic modules and components. VME crates use the Versa Module Eurocard (VME) bus standard, while NIM bins use the Nuclear Instrumentation Module (NIM) standard. Both systems allow for easy integration and customization of the experimental setup.
 
+<div align = "center">
+  <table>
+    <tr>
+      <td style={{ padding: "20px 20px" }}>
+        <Image src="/images/labs/nim_bin.jpg" width="400" height="400" />
+      </td>
+       <td style={{ padding: "20px 20px" }}>
+         <Image src="/images/labs/vme.png" width="400" height="400" />
+      </td>
+    </tr>
+    <tr>
+      <td style={{ textAlign: "center", maxWidth: "250px"  }}>
+        NIM bin.
+      </td>
+      <td style={{ textAlign: "center", maxWidth: "250px"  }}>
+        VME crate.
+      </td>
+    </tr>
+  </table>
+</div>
+
 ### PMT Shutter Wheel System
 The PMT shutter wheel system is an in-house designed apparatus that measures the non-linearity of photomultiplier tube (PMT) gain. This system helps the group to better understand and characterize the performance of PMTs used in various experiments.
+
+
+<br></br>
+<br></br>
+
+<div align = "center">
+<Image src="/images/labs/pmt.png" width="600" height="400" />
+</div>
+
+<br></br>
+<br></br> 
 
 ## Second Lab Space
 The second lab space contains specialized equipment and tools for computer-aided design (CAD) and optical measurements.
